add getcp api
